--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -22,6 +22,9 @@
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
+import:
+  # uncomment the flavour you want below:
+  - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
 
 window:
   # Window dimensions (changes require restart)
@@ -193,35 +196,35 @@ font:
 # TokyoNight Alacritty Colors
 colors:
   # Default colors
-  primary:
-    background: '#24283b'
-    foreground: '#c0caf5'
+  # primary:
+  #   background: '#24283b'
+  #   foreground: '#c0caf5'
 
-  # Normal colors
-  normal:
-    black:   '#1D202F'
-    red:     '#f7768e'
-    green:   '#CFFF9C'
-    yellow:  '#e0af68'
-    blue:    '#7aa2f7'
-    magenta: '#bb9af7'
-    cyan:    '#7dcfff'
-    white:   '#a9b1d6'
+  # # Normal colors
+  # normal:
+  #   black:   '#1D202F'
+  #   red:     '#f7768e'
+  #   green:   '#CFFF9C'
+  #   yellow:  '#e0af68'
+  #   blue:    '#7aa2f7'
+  #   magenta: '#bb9af7'
+  #   cyan:    '#7dcfff'
+  #   white:   '#a9b1d6'
 
-  # Bright colors
-  bright:
-    black:   '#414868'
-    red:     '#f7768e'
-    green:   '#9ece6a'
-    yellow:  '#e0af68'
-    blue:    '#7aa2f7'
-    magenta: '#bb9af7'
-    cyan:    '#7dcfff'
-    white:   '#c0caf5'
+  # # Bright colors
+  # bright:
+  #   black:   '#414868'
+  #   red:     '#f7768e'
+  #   green:   '#9ece6a'
+  #   yellow:  '#e0af68'
+  #   blue:    '#7aa2f7'
+  #   magenta: '#bb9af7'
+  #   cyan:    '#7dcfff'
+  #   white:   '#c0caf5'
 
-  indexed_colors:
-    - { index: 16, color: '#ff9e64' }
-    - { index: 17, color: '#db4b4b' }
+  # indexed_colors:
+  #   - { index: 16, color: '#ff9e64' }
+  #   - { index: 17, color: '#db4b4b' }
 
   # Cursor colors
   #
@@ -246,19 +249,19 @@ colors:
   # Search colors
   #
   # Colors used for the search bar and match highlighting.
-  search:
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    matches:
-      foreground: '#000000'
-      background: '#ffffff'
-    focused_match:
-      foreground: '#ffffff'
-      background: '#000000'
+  # search:
+  #   # Allowed values are CellForeground/CellBackground, which reference the
+  #   # affected cell, or hexadecimal colors like #ff00ff.
+  #   matches:
+  #     foreground: '#000000'
+  #     background: '#ffffff'
+  #   focused_match:
+  #     foreground: '#ffffff'
+  #     background: '#000000'
 
-    bar:
-      background: '#c5c8c6'
-      foreground: '#1d1f21'
+  #   bar:
+  #     background: '#c5c8c6'
+  #     foreground: '#1d1f21'
 
   # Keyboard regex hints
   #hints:
