--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,7 +2,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 12.0;
+corner-radius = 5.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   #"class_g = 'awesome'",
@@ -86,6 +86,7 @@ shadow-exclude = [
   #"class_g = 'Cairo-clock'",
   #"class_g = 'slop'",
 #  "class_g = 'Polybar'",
+  # "class_g = 'Plank'"
   #"_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -163,6 +164,7 @@ focus-exclude = [
   #"class_g = 'Cairo-clock'",
   #"class_g = 'Bar'",                    # lemonbar
   #"class_g = 'slop'"                    # maim
+ # "class_g = 'Plank'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -251,6 +253,7 @@ blur-background-exclude = [
   #"window_type = 'dock'",
   #"window_type = 'desktop'",
   #"class_g = 'URxvt'",
+  "class_g = 'Plank'"
   #
   # prevents picom from blurring the background
   # when taking selection screenshot with `main`
