apply catppuccin to albert

--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,4 +1,5 @@
 [General]
+frontendId=org.albert.frontend.widgetboxmodel
 hotkey=Meta+Space
 showTray=true
 terminal=alacritty -e
@@ -19,5 +20,5 @@ hideOnClose=false
 hideOnFocusLoss=true
 itemCount=5
 showCentered=true
-theme=Catppuccin-Borderless
+theme=Catppuccin
 windowPosition=@Point(609 285)
