--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,18 +3,18 @@
 #################################
 # requires: https://github.com/sdhand/compton
 corner-radius = 5.0;
-rounded-corners-exclude = [
+#rounded-corners-exclude = [
   #"window_type = 'normal'",
   #"class_g = 'awesome'",
   #"class_g = 'URxvt'",
   #"class_g = 'XTerm'",
   #"class_g = 'kitty'",
 #  "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
+  #"class_g = 'Polybar'",
   #"class_g = 'code-oss'",
 #  "class_g = 'firefox'",
 #  "class_g = 'Thunderbird'"
-];
+#];
 round-borders = 1;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
@@ -185,14 +185,14 @@ opacity-rule = [
   #"100:class_g    = 'URxvt'",
   #"100:class_g    = 'kitty'",
   "80:class_g    = 'Alacritty'",
-  "80:class_g    = 'Org.gnome.Nautilus'",
+  #"80:class_g    = 'Org.gnome.Nautilus'",
 #  "80:class_g     = 'Polybar'",
   #"100:class_g    = 'code-oss'",
   #"100:class_g    = 'Meld'",
   #"70:class_g     = 'TelegramDesktop'",
-  #"90:class_g     = 'Joplin'",
-  #"100:class_g    = 'firefox'",
-  #"100:class_g    = 'Thunderbird'"
+  "90:class_g     = 'Joplin'",
+  "90:class_g    = 'firefox'",
+  "90:class_g    = 'Thunderbird'"
 ];
 
 
@@ -237,7 +237,7 @@ blur-kern = "3x3box";
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  method = "dual-kawase";
   #method = "kernel";
   strength = 7;
   # deviation = 1.0;
@@ -310,7 +310,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0;
+#refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
