change font to debian supported Fira

--- a/polybar/config
+++ b/polybar/config
@@ -24,16 +24,16 @@ width = 100%
 height = 25
 
 background = ${color.background}
-foreground = ${colors.foreground}
+foreground = ${color.foreground}
 
 line-size = 2
 line-color = ${color.secondary1}
 
 font-0 = "FreeSans:size=11;1"
-font-1 = "Iosevka Nerd Font Mono:size=18;3"
-font-2 = "Iosevka Nerd Font Mono:size=16;4"
-font-3 = "Iosevka Nerd Font Mono:size=18;4"
-font-4 = "Iosevka Nerd Font Mono:style=Bold:size=10;3"
+font-1 = "Fira Code Nerd Font Mono:size=18;3"
+font-2 = "Fira Code Nerd Font Mono:size=16;4"
+font-3 = "Fira Code Nerd Font Mono:size=18;4"
+font-4 = "Fira Code Nerd Font Mono:style=Bold:size=10;3"
 
 modules-left = LLL bspwm  LLL MRD 
 modules-center = 
@@ -58,7 +58,7 @@ enable-ipc = true
 
 [bar/main]
 
-monitor = eDP1
+monitor = eDP-1
 monitor-strict = true
 
 override-redirect = false
@@ -87,10 +87,10 @@ module-margin-left = 0
 module-margin-right = 0
 
 font-0 = "FreeSans:size=11;1"
-font-1 = "Iosevka Nerd Font Mono:size=18;3"
-font-2 = "Iosevka Nerd Font Mono:size=16;4"
-font-3 = "Iosevka Nerd Font Mono:size=18;4"
-font-4 = "Iosevka Nerd Font Mono:style=Bold:size=10;3"
+font-1 = "Fira Code Nerd Font Mono:size=18;3"
+font-2 = "Fira Code Nerd Font Mono:size=16;4"
+font-3 = "Fira Code Nerd Font Mono:size=18;4"
+font-4 = "Fira Code Nerd Font Mono:style=Bold:size=10;3"
 
 # Default
 modules-left = LLL bspwm  LLL MRD CLD LLL polywins LLL MRD
