--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,11 +1,13 @@
 [General]
 frontendId=org.albert.frontend.widgetboxmodel
 hotkey=Meta+Space
-showTray=true
+showTray=false
 terminal=alacritty -e
 
 [org.albert.extension.applications]
 enabled=true
+use_generic_name=true
+use_keywords=true
 
 [org.albert.extension.files]
 enabled=true
@@ -18,7 +20,7 @@ displayScrollbar=false
 displayShadow=true
 hideOnClose=false
 hideOnFocusLoss=true
-itemCount=5
+itemCount=6
 showCentered=true
 theme=Catppuccin
 windowPosition=@Point(609 285)
