dereference xbacklight because it sucks

--- a/polybar/config
+++ b/polybar/config
@@ -95,7 +95,7 @@ font-4 = "Fira Code Nerd Font Mono:style=Bold:size=10;3"
 # Default
 modules-left = LLL bspwm  LLL MRD CLD LLL polywins LLL MRD
 modules-center =  dot MLD LLL date LLL time LLL MRD dot 
-modules-right = MLD LLL network  LLL system-bluetooth-bluetoothctl LLL CRD MLD LLL volume LLL backlight LLL LLL battery LLL
+modules-right = MLD LLL network  LLL system-bluetooth-bluetoothctl LLL CRD MLD LLL volume LLL brightness LLL LLL battery LLL
 
 spacing = 0
 dim-value = 1.0
