Not sure what these changes signify but i need to commit

--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,6 +1,7 @@
 [General]
 frontendId=org.albert.frontend.widgetboxmodel
 hotkey=Meta+Space
+incrementalSort=true
 showTray=false
 terminal=alacritty -e
 
@@ -10,6 +11,9 @@ use_generic_name=true
 use_keywords=true
 
 [org.albert.extension.files]
+enabled=true
+
+[org.albert.extension.system]
 enabled=true
 
 [org.albert.frontend.widgetboxmodel]
