--- a/polybar/config
+++ b/polybar/config
@@ -93,7 +93,7 @@ font-3 = "Fira Code Nerd Font Mono:size=18;4"
 font-4 = "Fira Code Nerd Font Mono:style=Bold:size=10;3"
 
 # Default
-modules-left = LLL bspwm  LLL MRD CLD LLL polywins LLL MRD
+modules-left = LLL bspwm  LLL MRD 
 modules-center =  dot MLD LLL date LLL time LLL MRD dot 
 modules-right = MLD LLL network  LLL system-bluetooth-bluetoothctl LLL CRD MLD LLL volume LLL brightness LLL LLL battery LLL
 
