Rewrite keymaps for caps keys after updating sioyek

--- a/sioyek/keys_user.config
+++ b/sioyek/keys_user.config
@@ -1,7 +1,7 @@
-next_page		<S-j>
-previous_page		<S-k>
-goto_bottom_of_page	<S-l>
-goto_top_of_page	<S-h>
+next_page		J
+previous_page		K
+goto_bottom_of_page	L
+goto_top_of_page	H
 toggle_custom_color	<C-r>
 add_highlight           ah
 zoom_in			+
