--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,18 +3,19 @@
 #################################
 # requires: https://github.com/sdhand/compton
 corner-radius = 5.0;
-#rounded-corners-exclude = [
+rounded-corners-exclude = [
   #"window_type = 'normal'",
   #"class_g = 'awesome'",
   #"class_g = 'URxvt'",
   #"class_g = 'XTerm'",
   #"class_g = 'kitty'",
 #  "class_g = 'Alacritty'",
-  #"class_g = 'Polybar'",
+  "class_g = 'Polybar'"
   #"class_g = 'code-oss'",
 #  "class_g = 'firefox'",
 #  "class_g = 'Thunderbird'"
-#];
+#
+];
 round-borders = 1;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
