--- a/polybar/config
+++ b/polybar/config
@@ -3,10 +3,11 @@ margin-bottom = 0
 margin-top = 0
 
 include-file = ~/.config/polybar/colors
-;;include-file = ~/.config/polybar/mocha.ini
+include-file = ~/.config/polybar/mocha.ini
 include-file = ~/.config/polybar/modules
 include-file = ~/.config/polybar/decor
-include-file = ~/.config/polybar/frappe.ini
+include-file = ~/.config/polybar/system
+;include-file = ~/.config/polybar/frappe.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -19,22 +20,23 @@ bottom = false
 fixed-center = true
 
 width = 100%
-height = 20
+height = 30
 
 background = ${colors.base}
-foreground = ${colors.text}
+foreground = ${colors.rosewater}
 
-border-size = 5
+;radius = 0.0
+border-size = 3
 border-color = ${colors.base}
 
-line-size = 2
-line-color = ${colors.base}
+;line-size = 2
+;line-color = ${colors.base}
 
-;font-0 = "FreeSans:size=11;1"
-font-0 = "Fira Code Nerd Font:size=12;2"
+font-0 = "FreeSans:size=11;2"
 font-1 = "Fira Code Nerd Font Mono:size=18;3"
-font-2 = "Fira Code Nerd Font Mono:size=16;4"
-font-3 = "Fira Code Nerd Font Mono:size=18;4"
-font-4 = "Fira Code Nerd Font Mono:style=Bold:size=10;3"
+font-2 = "Fira Code Nerd Font Mono:size=18;3"
+font-3 = "Fira Code Nerd Font Mono:style=Bold:size=40;3"
 
-modules-left = bspwm  LLL MRD 
+modules-left = filling bspwm  right-circle MRD 
+modules-center = left-circle date filling time right-circle
+modules-right = left-circle volume filling brightness filling battery filling
