reconfigure polydock position and icon theme

--- a/polydock/settings.ini
+++ b/polydock/settings.ini
@@ -1,22 +1,22 @@
 [appearance]
 #One of top, bottom, left, right
-position=bottom
+position=top
 #One of start, center, end
-alignment=center
+alignment=start
 #Additional offsets to further fine-tune the position of the dock
-offsetX=0
-offsetY=0
-iconSize=35
+offsetX=170
+offsetY=3
+iconSize=20
 #Name of the theme file, or 'default'.
 #See config/themes/default.css
 theme=default
 #An gtk icon theme name, or 'default'
-iconTheme=default
+iconTheme=Papirus-Dark
 
 [behavior]
 #Specify a list of keys to group windows on: class;instance;title;visibility
 groupBy=instance;visibility;
-activeWorkspaceOnly=false
+activeWorkspaceOnly=true
 showHidden=true
 showVisible=true
 #Automatically hides Polydock if another window overlaps
@@ -25,7 +25,7 @@ autoHide=false
 click=toggle-cycle
 menu-click=show
 #Exclude windows whose class or instance contains one of these values
-exclude=scratchpad;albert;
+exclude=albert;
 
 [commands]
 hide=bspc node {window} -g hidden=on -f
@@ -34,9 +34,11 @@ unhide=bspc node {window} -g hidden=off -f
 #Rules for custom icons matching the class::instance of windows
 #icon-name=string to be part of class::instance
 [icons]
-google-agenda=calendar.google.com
-gmail=mail.google.com
-keep=keep.google.com
-messengerfordesktop=www.messenger.com
-whatsapp=whatsapp
+;spotify=spotify
+;joplin=joplin
+;google-agenda=calendar.google.com
+;gmail=mail.google.com
+;keep=keep.google.com
+;messengerfordesktop=www.messenger.com
+;whatsapp=whatsapp
 
