--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -10,11 +10,21 @@ enabled=true
 use_generic_name=true
 use_keywords=true
 
+[org.albert.extension.chromium]
+bookmarks_path=/home/cinder/.config/chromium/Default/Bookmarks
+enabled=false
+
 [org.albert.extension.files]
-enabled=true
+enabled=false
+
+[org.albert.extension.ssh]
+enabled=false
 
 [org.albert.extension.system]
 enabled=true
+
+[org.albert.extension.terminal]
+enabled=false
 
 [org.albert.frontend.widgetboxmodel]
 alwaysOnTop=true
