--- a/polybar/config
+++ b/polybar/config
@@ -37,6 +37,10 @@ font-1 = "Fira Code Nerd Font Mono:size=18;3"
 font-2 = "Fira Code Nerd Font Mono:size=14;3"
 font-3 = "Fira Code Nerd Font Mono:size=40;9"
 
-modules-left = filling bspwm  right-circle 
+modules-left = filling bspwm  right-circle
 modules-center = left-circle date filling time right-circle
-modules-right = bt spacing network spacing left-circle vol filling brightness filling battery filling
+modules-right = bt spacing network spacing left-circle volume filling brightness filling battery filling
+
+[settings]
+
+enable-ipc = true
