make sio load tutorial, hopefully this fixes a bug with launching sioyek

--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -1,4 +1,6 @@
 should_launch_new_window 1
+should_load_tutorial_when_no_other_file 1
+highlight_delete_threshold 1
 custom_background_color 0.118 0.118 0.180
 custom_text_color 0.804 0.839 0.956
 page_separator_width 2
